# learn

./: .editorconfig  .gitignore  PROGRESS.md  README.md  SETUP.md  STUDY-PLAN.md
.github/workflows/: ci-java.yml  ci-python.yml  ci-security.yml  ci-web.yml
agentic-python/: README.md  pyproject.toml
agentic-python/src/agentic/: __init__.py  llm.py  main.py  rag_graph.py  retriever.py
agentic-python/tests/: test_llm.py  test_mcp_retriever.py  test_rag_graph.py  test_smoke.py
backend-service/: README.md  pom.xml
capstone/: DESIGN.md  README.md
docs/: 00-how-to-use.md  how-to-study-solo.md  rubrics.md
docs/behavioral/: README.md  leadership-principles.md  question-banks.md  staff-signals.md  story-bank.md
docs/cheatsheets/: README.md  big-o.md  design-checklists.md  pattern-triggers.md  system-design-numbers.md
docs/dsa/: CONVENTIONS.md  README.md  ROADMAP.md
docs/dsa/patterns/: advanced-graphs.md  arrays-hashing.md  backtracking.md  binary-search.md  bit-manipulation.md  dp-1d.md  dp-2d.md  graphs.md  greedy.md  heap-priority-queue.md  intervals.md  linked-list.md  math-geometry.md  sliding-window.md  stack.md  (+3 more)
docs/hld/: README.md  cicd.md  core-concepts.md  databases.md  elasticsearch.md  framework.md  frontend-observability.md  frontend-system-design.md  security.md
docs/interview-process/: README.md  hiring-manager.md  leveling.md  logistics.md  managerial-round.md  negotiation.md  recruiter-screen.md  team-matching.md
docs/lld/: README.md  coding-principles.md  design-patterns.md  framework.md  oop-refresher.md  solid.md  testing-strategy.md
docs/mock-interviews/: README.md  behavioral-mock.md  coding-mock.md  full-loop.md  hld-mock.md  lld-mock.md
dsa-java/: README.md  pom.xml
expo-app/: app.json  css.d.ts  package-lock.json  package.json
graphql-layer/: README.md
graphql-layer/client/: index.html  package-lock.json  package.json  vite.config.ts
graphql-layer/server/: package-lock.json  package.json
infra/: .env.example  README.md  docker-compose.yml
mcp-server-py/: README.md  pyproject.toml
mcp-server-py/src/mcp_knowledge/: __init__.py  chunking.py  corpus.py  embeddings.py  rag.py  server.py  vector_store.py
mcp-server-py/tests/: test_rag.py  test_server.py
web/: README.md
web/astro-app/: package-lock.json  package.json
web/nextjs-app/: package-lock.json
web/react-router-app/: package-lock.json  package.json
web/spa-react-vite/: index.html  package-lock.json  package.json  vite.config.ts
web/ssr-tanstack-start/: .cta.json  README.md  package.json  vite.config.ts
(+832 files in other folders)
