[project]
name = "agentic-python"
version = "0.1.0"
description = "Agentic workflow practice app — Claude Agent SDK (modern AI-systems track)"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]
