[project]
name = "agentic-python"
version = "0.1.0"
description = "Agentic Corrective-RAG over MCP (LangGraph) — modern AI-systems track"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "mcp>=1.2",
    "mcp-knowledge-server",
]

[project.optional-dependencies]
# Swap the deterministic FakeLLM for real Claude: `uv sync --extra claude` + ANTHROPIC_API_KEY.
claude = ["anthropic>=0.40"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

# Path dependency on the sibling MCP server (monorepo) — makes the client->server flow real.
[tool.uv.sources]
mcp-knowledge-server = { path = "../mcp-server-py", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]
