[project]
name = "mcp-knowledge-server"
version = "0.1.0"
description = "MCP server exposing a lightweight RAG knowledge base (from-scratch TF-IDF retrieval)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2",
    "numpy>=1.26",
]

[project.scripts]
knowledge-server = "mcp_knowledge.server:run"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_knowledge"]
